--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ p {
   margin-left: 30px;
 }
 
-.item{
+.lang{
   width: 200px;
 }
 
@@ -150,7 +150,7 @@ height:50px;
 width:140px;
 	text-decoration:none;
 	text-align:center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .btn:hover{
