--- a/css/style.css
+++ b/css/style.css
@@ -111,42 +111,16 @@ p {
   margin-left: 30px;
 }
 
-.flip-card {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: transparent;
-  margin: auto;
-  width: 300px;
-  height: 200px;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-}
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
+.projects{
+  padding-top: 100px;
   text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
 }
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
+
+.cli-resume{
+  border-radius: 25px;
+  width: 70%;
 }
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-}
-.flip-card-front {
-  background-color:
-  color: black;
-}
-.flip-card-back {
-  background-color: #66BFBF;
-  color: white;
-  transform: rotateY(180deg);
-}
+
 .btn {
 	background-color:#66BFBF;
 	-webkit-border-top-left-radius:28px;
